Bug 321927 - autoconfig support not working properly
Summary: autoconfig support not working properly
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 4.10.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-03 21:08 UTC by Marc Schiffbauer
Modified: 2013-07-04 08:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Schiffbauer 2013-07-03 21:08:23 UTC
kmail has an autoconfig feature that can use the mozilla autoconfig protocol to configure email accounts.

However this feature does not work properly. I tried to configure my email account but kmail failed to autoconfigure it.
I am using automx to serve the autoconfig service.

You can use http://automx.org for testing the feature.

Reproducible: Always

Steps to Reproduce:
1. Start "Tools" -> "Account Wizard"
2. Enter "automx@automx.org" as mail address and "automx" as password
3. Click Next
Actual Results:  
kmail will fail to configure the account

Expected Results:  
kmail should query the correct DNS records and find the service that will serve all data required to configure account data
Comment 1 Laurent Montel 2013-07-04 06:32:02 UTC
Git commit bb58cdc9dd1a166e886b091602483f20f61c3130 by Montel Laurent.
Committed on 04/07/2013 at 06:31.
Pushed by mlaurent into branch 'master'.

Fix Bug 321927 - autoconfig support not working properly

FIXED-IN: 4.11

M  +1    -1    accountwizard/ispdb/ispdb.cpp

http://commits.kde.org/kdepim-runtime/bb58cdc9dd1a166e886b091602483f20f61c3130
Comment 2 Marc Schiffbauer 2013-07-04 08:07:38 UTC
Wow, this was quick. Works like a charm now thanks Montel!