Fix Bug 321927 - autoconfig support not working properly

FIXED-IN: 4.11
BUG: 321927